# nihil_elegans

./: README.md
client/: Cargo.toml
client/src/: commands.rs  main.rs  prompt.rs
server/: Cargo.toml
server/src/: commands.rs  handler.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
