[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async
async-trait = "0.1.89"
futures = "0.3.31"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"

# DNS
hickory-proto = "0.26.0-alpha.1"
hickory-server = "0.26.0-alpha.1"

# Error Handling
color-eyre = "0.6.5"

# Cmdline
inquire = "0.9.3"
reedline = { version = "0.45.0", features = ["external_printer"] }

shared = { path = "../shared" }