[package]
name = "server"
version = "0.1.1"
edition = "2024"

[dependencies]
# Async
async-trait = "0.1.89"
tokio = { version = "1.49.0", features = ["full"] }

# DNS
hickory-proto = "0.26.0-alpha.1"
hickory-server = "0.26.0-alpha.1"

# Error Handling
color-eyre = "0.6.5"

# Cmdline
clap = { version = "4.5.58", features = ["derive"] }
inquire = "0.9.3"
reedline = { version = "0.45.0", features = ["external_printer"] }

shared = { path = "../shared" }